home and navbar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
     <div class="p-5 hero" style="width: 100%; max-width: 900px; ">
         <h5 class="text-uppercase mb-md-3">We are building the future NOW</h5>
         <h1 class="display-3 text-white  mb-md-4">WELCOME TO IR4LAB</h1>
-        <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Get Started</a>
+        <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Get Started <span></span><span></span><span></span><span></span></a>
     </div>
     <div class="hero-card">
         <h6>We live in an era where technologies are evolving at a rapid pace, existing business models are disrupted and new ones are emerging. We are moving from a physical world focused on products to a digital world focused on services.</h6>
