--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,146 +1,201 @@
-        /********** general ************/
-        
-        h1,
-        .font-weight-black {
-            font-weight: 900 !important;
-        }
-        
-        h2,
-        .font-weight-bolder {
-            font-weight: 800 !important;
-        }
-        
-        h3,
-        .font-weight-bold {
-            font-weight: 700 !important;
-        }
-        
-        h4,
-        .font-weight-semi-bold {
-            font-weight: 600 !important;
-        }
-        
-        h5 .font-weight-medium {
-            font-weight: 500 !important;
-        }
-        
-        h6,
-        .font-weight-normal {
-            font-weight: 400 !important;
-        }
-        /********** specific ************/
-        
-        .h1 {
-            color: #fff !important;
-        }
-        
-        h5 {
-            color: #fff;
-        }
-        
-        .hero-des {
-            position: absolute;
-            width: 100%;
-            z-index: -5;
-            border-left: 10px solid rgba($color: #fff, $alpha: 0.1);
-            border-right: 10px solid rgba($color: #fff, $alpha: 0.1);
-            background: rgba($color: #151F3E, $alpha: 1);
-            // border-radius: 20px;
-            height: 80vh;
-            clip-path: polygon(0 0, 100% 0, 100% 71%, 0 100%);
-        }
-        
-        .hero-border {
-            z-index: -8;
-            position: absolute;
-            height: 85vh;
-            width: 100vw;
-            background-color: rgba($color: #fff, $alpha: 1);
-            clip-path: polygon(0 0, 100% 0, 100% 71%, 0 100%);
-        }
-        
-        .hero-bg {
-            border-left: 10px solid #fff;
-            z-index: -10;
-            position: absolute;
-            height: 100vh;
-            width: 100%;
-            background-color: rgba($color: #fff, $alpha: 1);
-        }
-        
-        .hero-card {
-            margin: 10px;
-            border-top-left-radius: 30px;
-            border-bottom-right-radius: 30px;
-            border: 1px solid rgba($color: #000000, $alpha: 0.1);
-            box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-            padding: 15px;
-            position: absolute;
-            color: #151F3E;
-            max-width: 700px;
-            text-align: justify;
-            background-color: white;
-            bottom: 20px;
-        }
-        
-        .hero-card h6 {
-            font-weight: 600 !important;
-            font-size: 14px !important;
-        }
-        
-        .btn-primary {
-            background-color: #fff !important;
-            color: #151F3E;
-            border: 1px solid #fff;
-            box-shadow: 0 0 10px #ccc;
-        }
-        
-        .hero-image-up {
-            position: absolute;
-            width: 100%;
-            z-index: -2;
-            border-left: 10px solid rgba($color: #fff, $alpha: 0.1);
-            border-right: 10px solid rgba($color: #fff, $alpha: 0.1);
-            background: rgba($color: #151F3E, $alpha: 0.5);
-            // border-radius: 20px;
-            height: 80vh;
-            clip-path: polygon(0 0, 100% 0, 100% 71%, 0 100%);
-        }
-        
-        .hero-image {
-            position: absolute;
-            width: 100%;
-            z-index: -3;
-            height: 80vh;
-            clip-path: polygon(0 0, 100% 0, 100% 71%, 0 100%);
-            background-image: url('../../assets/lastOnline.svg');
-            border-left: 10px solid rgba($color: #fff, $alpha: 0.1);
-            border-right: 10px solid rgba($color: #fff, $alpha: 0.1);
-            background-repeat: no-repeat;
-            background-position-x: center;
-            background-position-y: end;
-        }
-        
-        #home {
-            height: 100vh;
-            box-shadow: none;
-        }
-        
-        @media (min-width:1024px) {
-            .hero-card h6 {
-                font-size: 24px !important;
+            /********** general ************/
+
+            h1,
+            .font-weight-black {
+                font-weight: 900 !important;
             }
+
+            $prim :#151F3E;
+            $sec:#00a2e2;
+            h2,
+            .font-weight-bolder {
+                font-weight: 800 !important;
+            }
+
+            h3,
+            .font-weight-bold {
+                font-weight: 700 !important;
+            }
+
+            h4,
+            .font-weight-semi-bold {
+                font-weight: 600 !important;
+            }
+
+            h5 .font-weight-medium {
+                font-weight: 500 !important;
+            }
+
+            h6,
+            .font-weight-normal {
+                font-weight: 400 !important;
+            }
+            /********** specific ************/
+
+            .h1 {
+                color: #fff !important;
+            }
+
+            h5 {
+                color: #fff;
+            }
+
+            .hero-des {
+                position: absolute;
+                width: 100%;
+                z-index: -5;
+                border-left: 10px solid rgba($color: #fff, $alpha: 0.1);
+                border-right: 10px solid rgba($color: #fff, $alpha: 0.1);
+                background: rgba($color: #151F3E, $alpha: 1);
+                // border-radius: 20px;
+                height: 80vh;
+                clip-path: polygon(0 0, 100% 0, 100% 71%, 0 100%);
+            }
+
+            .hero-border {
+                z-index: -8;
+                position: absolute;
+                height: 85vh;
+                width: 100vw;
+                background-color: rgba($color: #fff, $alpha: 1);
+                clip-path: polygon(0 0, 100% 0, 100% 71%, 0 100%);
+            }
+
+            .hero-bg {
+                border-left: 10px solid #fff;
+                z-index: -10;
+                position: absolute;
+                height: 100vh;
+                width: 100%;
+                background-color: rgba($color: #fff, $alpha: 1);
+            }
+
             .hero-card {
-                right: 50px;
+                margin: 10px;
+                border-top-left-radius: 30px;
+                border-bottom-right-radius: 30px;
+                border: 1px solid rgba($color: #000000, $alpha: 0.1);
+                box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+                padding: 15px;
+                position: absolute;
+                color: #151F3E;
+                max-width: 700px;
+                text-align: justify;
+                background-color: white;
+                bottom: 20px;
             }
-        }
-        
-        @media (min-width:660px) and (max-width:1024px) {
+
             .hero-card h6 {
-                font-size: 20px !important;
+                font-weight: 600 !important;
+                font-size: 14px !important;
             }
-            .hero-card {
-                right: 50px;
-                max-width: 550px;
+
+            .btn-primary {
+                --c: #fff;
+                color: $sec;
+                font-size: 16px;
+                border: 0.3em solid $sec;
+                border-radius: 0.5em;
+                text-transform: uppercase;
+                font-weight: bold;
+                font-family: sans-serif;
+                letter-spacing: 0.1em;
+                text-align: center;
+                line-height: 3em;
+                position: relative;
+                overflow: hidden;
+                z-index: 1;
+                transition: 0.5s;
+                margin: 1em;
+                background-color: #fff;
             }
-        }
+
+            // .btn-primary:hover {
+            //     background-color: $sec
+            // }
+            .btn-primary span {
+                position: absolute;
+                width: 25%;
+                height: 100%;
+                background-color: $sec;
+                transform: translateY(150%);
+                border-radius: 50%;
+                left: calc((var(--n) - 1) * 25%);
+                transition: 0.5s;
+                transition-delay: calc((var(--n) - 1) * 0.1s);
+                z-index: -1;
+            }
+
+            .btn-primary:hover {
+                color: #fff;
+            }
+
+            .btn-primary:hover span {
+                transform: translateY(0) scale(2);
+            }
+
+            .btn-primary span:nth-child(1) {
+                --n: 1;
+            }
+
+            .btn-primary span:nth-child(2) {
+                --n: 2;
+            }
+
+            .btn-primary span:nth-child(3) {
+                --n: 3;
+            }
+
+            .btn-primary span:nth-child(4) {
+                --n: 4;
+            }
+
+            .hero-image-up {
+                position: absolute;
+                width: 100%;
+                z-index: -2;
+                border-left: 10px solid rgba($color: #fff, $alpha: 0.1);
+                border-right: 10px solid rgba($color: #fff, $alpha: 0.1);
+                background: rgba($color: #151F3E, $alpha: 0.5);
+                // border-radius: 20px;
+                height: 80vh;
+                clip-path: polygon(0 0, 100% 0, 100% 71%, 0 100%);
+            }
+
+            .hero-image {
+                position: absolute;
+                width: 100%;
+                z-index: -3;
+                height: 80vh;
+                clip-path: polygon(0 0, 100% 0, 100% 71%, 0 100%);
+                background-image: url('../../assets/lastOnline.svg');
+                border-left: 10px solid rgba($color: #fff, $alpha: 0.1);
+                border-right: 10px solid rgba($color: #fff, $alpha: 0.1);
+                background-repeat: no-repeat;
+                background-position-x: center;
+                background-position-y: end;
+            }
+
+            #home {
+                height: 100vh;
+                box-shadow: none;
+            }
+
+            @media (min-width:1024px) {
+                .hero-card h6 {
+                    font-size: 24px !important;
+                }
+                .hero-card {
+                    right: 50px;
+                }
+            }
+
+            @media (min-width:660px) and (max-width:1024px) {
+                .hero-card h6 {
+                    font-size: 20px !important;
+                }
+                .hero-card {
+                    right: 50px;
+                    max-width: 550px;
+                }
+            }
