--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,149 +1,167 @@
-$prim :#151F3E;
-$sec:#00a2e2;
-.navbar {
-    scroll-behavior: smooth;
-    z-index: 99;
-    position: fixed;
-    // background-color: rgba(255, 255, 255, 0.8);
-    // border-top: 2px solid white;
-    border-bottom: 1px solid rgba($color: #fff, $alpha: 0.1);
-    // border-left: 2px solid #7ab9d4;
-    background: rgba($color: #151F3E, $alpha: 1);
-}
-
-.navbar-toggler {
-    border: none !important;
-    box-shadow: none !important;
-}
-
-.navbar-brand {
-    border-right: 4px solid #fff;
-    border-top: 4px solid #fff;
-    border-bottom: 4px solid #fff;
-    border-left: 4px solid #fff;
-    box-shadow: 0 0 20px #ccc;
-    // border-radius: 50%;
-    background-color: rgba($color: #fff, $alpha: 1);
-    padding: 5px 10px;
-    border-radius: 5px;
-}
-
-.navbar-brand img {
-    width: 100px;
-}
-
-.nav-item a {
-    color: #fff;
-    font-weight: 600;
-    cursor: pointer;
-}
-
-@media (max-width: 768px) {
-    .collapsed {
-        color: black !important;
+    $prim :#151F3E;
+    $sec:#00a2e2;
+    .navbar {
+        scroll-behavior: smooth;
+        z-index: 99;
+        position: fixed;
+        // background-color: rgba(255, 255, 255, 0.8);
+        // border-top: 2px solid white;
+        border-bottom: 1px solid rgba($color: #fff, $alpha: 0.1);
+        // border-left: 2px solid #7ab9d4;
+        background: rgba($color: #151F3E, $alpha: 1);
     }
+
     .navbar-toggler {
         border: none !important;
         box-shadow: none !important;
-        z-index: 1111;
-        color: white;
     }
-    .nav-toggler.collapsed {
-        background-color: #fff;
+
+    .navbar-brand {
+        border-right: 4px solid #fff;
+        border-top: 4px solid #fff;
+        border-bottom: 4px solid #fff;
+        border-left: 4px solid #fff;
+        box-shadow: 0 0 20px #ccc;
+        // border-radius: 50%;
+        background-color: rgba($color: #fff, $alpha: 1);
+        padding: 5px 10px;
+        border-radius: 5px;
     }
-    .nav-wrapper {
-        position: absolute !important;
-        top: 0 !important;
-        left: 0 !important;
-        width: 100vw !important;
-        height: 100vh !important;
+
+    .navbar-brand img {
+        width: 100px;
     }
-    .navbar-nav {
-        position: relative !important;
-        top: 50px;
-        display: grid !important;
-        justify-content: center !important;
-        align-content: center !important;
-        grid-row-gap: 40px !important;
-        grid-column-gap: 50px !important;
-        grid-template-columns: repeat(2, 100px) !important;
-        grid-template-rows: 100px 100px 100px !important;
-        grid-auto-flow: column !important;
-    }
-    .nav-item {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        width: 126px !important;
-        height: 57.735px !important;
-        background: #282828 !important;
-        position: relative !important;
-        text-transform: uppercase !important;
-    }
-    .nav-item::before {
-        content: "";
-        position: absolute;
-        top: -38.8675px;
-        left: 0;
-        width: 0;
-        height: 0;
-        border-left: 63px solid transparent;
-        border-right: 63px solid transparent;
-        border-bottom: 38.8675px solid #494949;
-    }
-    .nav-item::after {
-        content: "";
-        position: absolute;
-        bottom: -38.8675px;
-        left: 0;
-        width: 0;
-        height: 0;
-        border-left: 63px solid transparent;
-        border-right: 63px solid transparent;
-        border-top: 38.8675px solid #000;
-    }
+
     .nav-item a {
-        color: white;
+        color: #fff;
+        font-weight: 600;
+        cursor: pointer;
+        transition: all 0.3s;
     }
-}
 
-.is-sticky {
-    transition: all 0.3s;
-    background-color: #fff;
-    // border-bottom: 1px solid rgba($color: $prim, $alpha: 0.1);
-    box-shadow: 0 0 20px rgba($color: $prim, $alpha: 0.1);
-}
+    .nav-item a:hover {
+        text-shadow: 0 0 10px #fff;
+        color: #fff;
+        transition: all 0.3s;
+    }
 
-.is-sticky a {
-    color: $prim !important;
-}
+    @media (max-width: 768px) {
+        .collapsed {
+            color: black !important;
+        }
+        .navbar-toggler {
+            border: none !important;
+            box-shadow: none !important;
+            z-index: 1111;
+            color: white;
+        }
+        .nav-toggler.collapsed {
+            background-color: #fff;
+        }
+        .nav-wrapper {
+            position: absolute !important;
+            top: 0 !important;
+            left: 0 !important;
+            width: 100vw !important;
+            height: 100vh !important;
+            padding: 10px;
+            transition: all 0.3 s;
+        }
+        .navbar-nav {
+            position: relative !important;
+            display: flex !important;
+            flex-direction: row;
+            flex-wrap: wrap;
+            transition: all 0.3 s;
+        }
+        .show {
+            transition: all 0.3 s;
+        }
+        .nav-item {
+            width: 30%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            position: relative !important;
+            padding: 0 10px;
+            margin: 0 10px;
+            text-transform: uppercase !important;
+        }
+        .nav-item a {
+            color: $prim;
+            font-weight: 800;
+            font-size: 22px;
+        }
+        #list-wrapper {
+            position: absolute;
+            background-color: rgba($color: #fff, $alpha: 1);
+            box-shadow: 0 5px 10px #fff;
+            border: 1px solid #ccc;
+            margin: 0 20px;
+            max-height: 50vh;
+            top: 80px;
+            border-top-left-radius: 40px;
+            border-bottom-right-radius: 40px;
+            z-index: 10;
+            right: 15px;
+            transition: all 0.1s ease-in;
+            position: fixed;
+            opacity: 0%;
+        }
+        #list-wrapper.show {
+            top: 120px;
+            opacity: 100%;
+            transition: all 0.1s ease-out;
+        }
+        .rectangle {
+            background-color: #fff;
+            border: 5px solid #ccc;
+            box-shadow: 0 0 10px #fff;
+            position: absolute;
+            top: 30px;
+            width: 60px;
+            height: 100px;
+            z-index: 4;
+            position: fixed;
+            transition: all 0.1s ease-out;
+            // border-radius: 30px;
+            opacity: 0%;
+        }
+        .rectangle.show {
+            opacity: 100%;
+            transition: all 0.4 ease-in;
+        }
+        .rectangle-right {
+            right: 50px;
+        }
+        .rectangle-left {
+            left: 50px;
+        }
+    }
 
-.is-sticky .navbar-brand {
-    border: none;
-    box-shadow: none;
-    background: none;
-}
+    .is-sticky {
+        transition: all 0.3s;
+        background-color: #fff;
+        // border-bottom: 1px solid rgba($color: $prim, $alpha: 0.1);
+        box-shadow: 0 0 20px rgba($color: $prim, $alpha: 0.1);
+    }
 
-#navbar {
-    transition: all 0.3s;
-    z-index: 5;
-}
+    .is-sticky a {
+        color: $prim !important;
+    }
 
-.rectangle {
-    background-color: #fff;
-    position: absolute;
-    top: 30px;
-    width: 60px;
-    height: 100px;
-    right: 50px;
-    z-index: 4;
-    position: fixed;
-    transition: all 1px;
-}
+    .is-sticky a:hover {
+        color: $sec !important;
+    }
 
-.list-wrapper {
-    position: absolute;
-    top: 50px;
-    background-color: $prim;
-}
+    .is-sticky .navbar-brand {
+        border: none;
+        box-shadow: none;
+        background: none;
+    }
+
+    #navbar {
+        transition: all 0.3s;
+        z-index: 5;
+    }
