--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,115 +1,115 @@
 <div id="services" class="our-services section justify-content">
     <div class="container ">
-      <div class="row">
-        <div class="col-lg-6 offset-lg-3">
-          <div class="section-heading wow bounceIn animated" data-wow-duration="1s" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
-            <h6>Our Services</h6>
-            <h2>Discover What We Do &amp; <span>Offer</span> To Our <em>Clients</em></h2>
-          </div>
+        <div class="row">
+            <div class="col-lg-6 offset-lg-3">
+                <div class="section-heading wow bounceIn animated" data-wow-duration="1s" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+                    <h2>Serv<span>ices</span></h2>
+                    <h4>Discover What We Do &amp; <span>Offer</span> To Our <em>Clients</em></h4>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-    <div class="container-fluid ">
-      <div class="row ">
-        <div class="col-lg-4">
-          <div class="service-item wow bounceInUp animated" data-wow-duration="1s" data-wow-delay="0.3s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.3s; -moz-animation-delay: 0.3s; animation-delay: 0.3s;">
-            <div class="row">
-              <div class="col-lg-4">
-                <div class="icon">
-                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="red" class="bi bi-laptop" viewBox="0 0 16 16">
+    <div class="container-fluid    ">
+        <div class="row ">
+            <div class="col-lg-4">
+                <div class="service-item wow bounceInUp animated" data-wow-duration="1s" data-wow-delay="0.3s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.3s; -moz-animation-delay: 0.3s; animation-delay: 0.3s;">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="red" class="bi bi-laptop" viewBox="0 0 16 16">
                     <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z"/>
                   </svg>
+                            </div>
+                        </div>
+                        <div class="col-lg-8">
+                            <div class="right-content">
+                                <h4>Education</h4>
+                                <p>IR4LAB offers a wide range of education services:Technology workshops,Certification programs,Executive education,Experiential learning,Customised programs.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-8">
-                <div class="right-content">
-                  <h4>Education</h4>
-                  <p>IR4LAB offers a wide range of education services:Technology workshops,Certification programs,Executive education,Experiential learning,Customised programs.</p>
-                </div>
-              </div>
             </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="service-item wow bounceInUp animated" data-wow-duration="1s" data-wow-delay="0.4s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.4s; -moz-animation-delay: 0.4s; animation-delay: 0.4s;">
-            <div class="row">
-              <div class="col-lg-4">
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="green" class="bi bi-send" viewBox="0 0 16 16">
+            <div class="col-lg-4">
+                <div class="service-item wow bounceInUp animated" data-wow-duration="1s" data-wow-delay="0.4s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.4s; -moz-animation-delay: 0.4s; animation-delay: 0.4s;">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="green" class="bi bi-send" viewBox="0 0 16 16">
                         <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z"/>
                       </svg>
+                            </div>
+                        </div>
+                        <div class="col-lg-8">
+                            <div class="right-content">
+                                <h4>Consulting</h4>
+                                <p>New technologies are disruptive and digital transformation can be a daunting task, our experts and partners are here to help you go through this journey.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-8">
-                <div class="right-content">
-                  <h4>Consulting</h4>
-                  <p>New technologies are disruptive and digital transformation can be a daunting task, our experts and partners are here to help you go through this journey.</p>
-                </div>
-              </div>
             </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="service-item wow bounceInUp animated" data-wow-duration="1s" data-wow-delay="0.5s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.5s; -moz-animation-delay: 0.5s; animation-delay: 0.5s;">
-            <div class="row">
-              <div class="col-lg-4">
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="orange" class="bi bi-file-earmark-code" viewBox="0 0 16 16">
+            <div class="col-lg-4">
+                <div class="service-item wow bounceInUp animated" data-wow-duration="1s" data-wow-delay="0.5s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.5s; -moz-animation-delay: 0.5s; animation-delay: 0.5s;">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="orange" class="bi bi-file-earmark-code" viewBox="0 0 16 16">
                         <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z"/>
                         <path d="M8.646 6.646a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708L10.293 9 8.646 7.354a.5.5 0 0 1 0-.708zm-1.292 0a.5.5 0 0 0-.708 0l-2 2a.5.5 0 0 0 0 .708l2 2a.5.5 0 0 0 .708-.708L5.707 9l1.647-1.646a.5.5 0 0 0 0-.708z"/>
                       </svg>
+                            </div>
+                        </div>
+                        <div class="col-lg-8">
+                            <div class="right-content">
+                                <h4>DEVELOPMENT</h4>
+                                <p>Our team of experts and international partners will help develop your next solution in a timely manner and according to top-notch standards.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-8">
-                <div class="right-content">
-                  <h4>DEVELOPMENT</h4>
-                  <p>Our team of experts and international partners will help develop your next solution in a timely manner and according to top-notch standards.</p>
-                </div>
-              </div>
             </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="service-item wow bounceInUp animated" data-wow-duration="1s" data-wow-delay="0.6s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.6s; -moz-animation-delay: 0.6s; animation-delay: 0.6s;">
-            <div class="row">
-              <div class="col-lg-4">
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="yellow" class="bi bi-lightbulb" viewBox="0 0 16 16">
+            <div class="col-lg-6">
+                <div class="service-item wow bounceInUp animated" data-wow-duration="1s" data-wow-delay="0.6s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.6s; -moz-animation-delay: 0.6s; animation-delay: 0.6s;">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="yellow" class="bi bi-lightbulb" viewBox="0 0 16 16">
                         <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1z"/>
                       </svg>
+                            </div>
+                        </div>
+                        <div class="col-lg-8">
+                            <div class="right-content">
+                                <h4>INNOVATION LAB</h4>
+                                <p>Our team is constantly looking into the power of emerging technologies,the human-technology interactions,the intersection of different technologies and how it can make the world a better place to live.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-8">
-                <div class="right-content">
-                  <h4>INNOVATION LAB</h4>
-                  <p>Our team is constantly looking into the power of emerging technologies,the human-technology interactions,the intersection of different technologies and how it can make the world a better place to live.</p>
-                </div>
-              </div>
             </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="service-item wow bounceInUp animated" data-wow-duration="1s" data-wow-delay="0.7s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.7s; -moz-animation-delay: 0.7s; animation-delay: 0.7s;">
-            <div class="row">
-              <div class="col-lg-4">
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="blue" class="bi bi-building" viewBox="0 0 16 16">
+            <div class="col-lg-6">
+                <div class="service-item wow bounceInUp animated" data-wow-duration="1s" data-wow-delay="0.7s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.7s; -moz-animation-delay: 0.7s; animation-delay: 0.7s;">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="blue" class="bi bi-building" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694 1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z"/>
                         <path d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z"/>
                       </svg>
+                            </div>
+                        </div>
+                        <div class="col-lg-8">
+                            <div class="right-content">
+                                <h4>Building</h4>
+                                <p>We believe in the power of community to foster innovation, open discussions are key to a successful technology implementation and adoption.We enable a "Collaborative intelligence" through services.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-8">
-                <div class="right-content">
-                  <h4>Building</h4>
-                  <p>We believe in the power of community to foster innovation, open discussions are key to a successful technology implementation and adoption.We enable a "Collaborative intelligence" through services.</p>
-                </div>
-              </div>
             </div>
-          </div>
+
+
         </div>
-        
-          
-      </div>
     </div>
-  </div>
+</div>
