--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -1,33 +1,35 @@
+$prim :#151F3E;
+$sec:#00a2e2;
 .our-services {
     padding-top: 120px;
-  }
-  
-  .our-services .section-heading {
+}
+
+.our-services .section-heading {
     text-align: center;
     margin-left: 75px;
     margin-right: 75px;
-  }
-  
-  .our-services .container-fluid {
+}
+
+.our-services .container-fluid {
     padding: 0px 80px;
-  }
-  
-  .service-item {
+}
+
+.service-item {
     padding: 60px 30px;
     border: 2px solid #f7f7f7;
     border-radius: 5px;
     transition: all .3s;
     margin-bottom: 30px;
     height: 300px;
-  }
-  
-  .service-item:hover {
+}
+
+.service-item:hover {
     background-color: #fff;
     border: 2px solid transparent;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-  }
-  
-  .service-item .icon {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.service-item .icon {
     margin-top: 10px;
     width: 80px;
     height: 80px;
@@ -36,22 +38,36 @@
     line-height: 80px;
     background-color: #f7f7f7;
     border-radius: 50%;
-  }
-  
-  .service-item .icon img {
-      width: 38px;
-      height: 38px;
-  }
-  
-  .service-item h4 {
+}
+
+.service-item .icon img {
+    width: 38px;
+    height: 38px;
+}
+
+.service-item h4 {
     font-size: 22px;
     font-weight: 700;
     color: #2a2a2a;
     margin-bottom: 15px;
-  }
-  @media (max-width: 768px)
-  {
-      .service-item{
-          height: 400px;
-      }
-  }
+}
+
+em {
+    color: $sec;
+}
+
+@media (max-width: 768px) {
+    .service-item {
+        height: 400px;
+    }
+}
+
+h2 {
+    font-weight: 800;
+    padding: 10px;
+    text-align: center;
+}
+
+h2 span {
+    color: $sec;
+}
