--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -14,6 +14,7 @@
     .navbar-toggler {
         border: none !important;
         box-shadow: none !important;
+        color: #fff !important;
     }
 
     .navbar-brand {
@@ -47,7 +48,7 @@
 
     @media (max-width: 768px) {
         .collapsed {
-            color: black !important;
+            color: white !important;
         }
         .navbar-toggler {
             border: none !important;
@@ -137,6 +138,9 @@
         }
         .rectangle-left {
             left: 50px;
+        }
+        .is-sticky .navbar-toggler {
+            color: $prim !important;
         }
     }
 
