fixed some issues

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,57 +1,59 @@
 #features {
     padding-top: 130px;
-  }
-  
-  .features .features-content {
+}
+
+$prim :#151F3E;
+$sec:#00a2e2;
+.features .features-content {
     z-index: 2;
     position: relative;
     background-color: #fff;
     border-radius: 50px;
-    box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
-  }
-  
-  .features-item {
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+}
+
+.features-item {
     text-align: center;
     padding: 30px;
     border-radius: 50px;
-    background: rgb(255,255,255);
-    background: linear-gradient(105deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 100%);
+    background: rgb(255, 255, 255);
+    background: linear-gradient(105deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 100%);
     transition: background-color .5s;
     -webkit-transition: background-color .5s;
     -o-transition: background-color .5s;
     -moz-transition: background-color .5s;
-  }
-  
-  .features-item:hover {
-    background: rgb(51,204,197);
-    background: linear-gradient(105deg, rgba(51,204,197,1) 0%, rgba(8,141,195,1) 100%);
-  }
-  
-  .features-item:hover h4 {
+}
+
+.features-item:hover {
+    background: rgb(51, 204, 197);
+    background: linear-gradient(105deg, rgba(51, 204, 197, 1) 0%, rgba(8, 141, 195, 1) 100%);
+}
+
+.features-item:hover h4 {
     color: #fff;
-  }
-  
-  .features-item:hover p {
+}
+
+.features-item:hover p {
     color: #fff;
-  }
-  
-  .features-item:hover .line-dec {
-    background-color: rgba(255,255,255,0.3);
-  }
-  
-  .first-feature:hover .icon {
+}
+
+.features-item:hover .line-dec {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.first-feature:hover .icon {
     background-image: url(../../assets/images/she.png);
-    border-radius:50%;
+    border-radius: 50%;
     background-repeat: no-repeat;
-  }
-  
-  .second-feature:hover .icon {
+}
+
+.second-feature:hover .icon {
     background-image: url(../../assets/images/gh.png);
-    border-radius:50%;
+    border-radius: 50%;
     background-repeat: no-repeat;
-  }
-  
-  .features-item .number h6 {
+}
+
+.features-item .number h6 {
     background-repeat: no-repeat;
     width: 110px;
     height: 69px;
@@ -64,35 +66,33 @@
     line-height: 69px;
     margin-top: -65px;
     margin-bottom: 30px;
-  }
-  
-  .features-item .first-number h6 {
-    background-image: url(../../assets/images/features-number-01.png);
-  }
-  
-  .features-item .second-number h6 {
-   background-image: url(../../assets/images/features-number-02.png);
-  }
-  
+}
 
-  
-  .first-feature .icon {
-   //background-image: url(../images/features-icon-black-01.png);
-  }
-  
-  .second-feature .icon {
-   // background-image: url(../images/features-icon-black-02.png);
-  }
-  
-  .features-item .icon {
+.features-item .first-number h6 {
+    background-image: url(../../assets/images/features-number-01.png);
+}
+
+.features-item .second-number h6 {
+    background-image: url(../../assets/images/features-number-02.png);
+}
+
+.first-feature .icon {
+    //background-image: url(../images/features-icon-black-01.png);
+}
+
+.second-feature .icon {
+    // background-image: url(../images/features-icon-black-02.png);
+}
+
+.features-item .icon {
     width: 90px;
     height: 90px;
     margin: 0 auto;
-   padding: 18px;
+    padding: 18px;
     transition: all 0.5s;
-  }
-  
-  .features-item h4 {
+}
+
+.features-item h4 {
     margin-left: 15px;
     margin-right: 15px;
     margin-top: 30px;
@@ -102,18 +102,33 @@
     color: #2a2a2a;
     position: relative;
     transition: all 0.5s;
-  }
-  
-  .features-item .line-dec {
+}
+
+.features-item .line-dec {
     width: 100px;
     height: 2px;
-    background-color: rgba(51,204,197,0.3);
+    background-color: rgba(51, 204, 197, 0.3);
     margin: 30px auto;
     transition: all 0.5s;
-  }
-  
-  .features-item p {
+}
+
+.features-item p {
     position: relative;
     margin-top: 0px;
     transition: all 0.5s;
-  }
+}
+
+h2 {
+    font-weight: 800;
+    padding: 10px;
+    text-align: center;
+    margin-bottom: 70px;
+}
+
+h2 span {
+    color: $sec;
+}
+
+#projects {
+    padding-top: 120px;
+}
