--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -1,109 +1,108 @@
-* { 
-    margin : 0;
+* {
+    margin: 0;
     padding: 0;
-    box-sizing : border-box;
-    font-family : "Poppins", sans-serif;
-    
-  
-  }
-  .bh {
-    display : flex;
-    align-items : center;
-    justify-content : center;
-  
-  
-    
-  }
-  
-  .container {
-    position : relative;
-    width : 1100px;
-    display : flex;
-    align-items : center;
-    justify-content : center;
-    flex-wrap : wrap;
-    
-    padding : 30px;  
-  }
-  
-  .container .card {
-    position: relative;
-    width : 300px;
-    height : 215px;  
-    background-color : rgba(255, 255, 255, 0.685);
-    margin : 30px 10px;
-    padding : 20px 15px;
-    
-    display : flex;
-    flex-direction : column;
-    box-shadow : 0 5px 20px rgba(0,0,0,0.5);
-    transition : 0.3s ease-in-out;
-    border-radius : 15px;
-  }
-  .container .card:hover {
-    height : 600px;
-    width: 370px;
-   
-  }
-  
-  
-  .container .card .image {
-    position : relative;
-    width : 270px;
-    height : 270px;
-    
-    top : 10%;
-    left: 70px;
-    
-    z-index : 1;
-  }
-  
-  .container .card .image img {
-    max-width : 100%;
-    border-radius : 15px;
-  }
-  
-  .container .card .content {
-    position : relative;
-    top : -140px;
-    padding : 10px 15px;
-    color : rgb(71, 83, 255);
-    text-align : center;
-    
-    visibility : hidden;
-    opacity : 0;
-    transition : 0.3s ease-in-out;
-      
-  }
-  
-  .container .card:hover .content {
-     margin-top : 30px;
-     visibility : visible;
-     opacity : 1;
-     transition-delay: 0.7s;
-    
-  }
-  .container .card:hover .image{
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
 
-    
+$prim :#151F3E;
+$sec:#00a2e2;
+.bh {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#technologies {
+    padding-top: 120px;
+}
+
+.container {
+    position: relative;
+    width: 1100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 30px;
+}
+
+.container .card {
+    position: relative;
+    width: 300px;
+    height: 215px;
+    background-color: rgba(255, 255, 255, 0.685);
+    margin: 30px 10px;
+    padding: 20px 15px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+    transition: 0.3s ease-in-out;
+    border-radius: 15px;
+}
+
+.container .card:hover {
+    height: 600px;
+    width: 370px;
+}
+
+.container .card .image {
+    position: relative;
+    width: 270px;
+    height: 270px;
+    top: 10%;
+    left: 70px;
+    z-index: 1;
+}
+
+.container .card .image img {
+    max-width: 100%;
+    border-radius: 15px;
+}
+
+.container .card .content {
+    position: relative;
+    top: -140px;
+    padding: 10px 15px;
+    color: rgb(71, 83, 255);
+    text-align: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s ease-in-out;
+}
+
+.container .card:hover .content {
+    margin-top: 30px;
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0.7s;
+}
+
+.container .card:hover .image {
     left: 100px;
-    top : -24%;
+    top: -24%;
     transition: 1.5s;
     opacity: .7;
-    
-  }
-  .card h3 {
-top: 70px;
-text-align: center;
+}
 
-  }
-:hover  .h3title{
-
-    position : relative;
-   
-    
-    top : 5%;
+.card h3 {
+    top: 70px;
     text-align: center;
-    
-    z-index : 1;
- }
+}
+
+:hover .h3title {
+    position: relative;
+    top: 5%;
+    text-align: center;
+    z-index: 1;
+}
+
+h2 {
+    font-weight: 800;
+    padding: 10px;
+    text-align: center;
+}
+
+h2 span {
+    color: $sec;
+}
