--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,5 @@
 
-          <div class="features-content " >
+          <div class="features-content  d-flex justify-content-center align-items-center" >
             <div class="row justify-content-center">
               <div class="col-lg-3">
                 <div class="features-item first-feature wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="0s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0s; -moz-animation-delay: 0s; animation-delay: 0s;">
@@ -9,7 +9,7 @@
                   <div class="icon"></div>
                   <h4>Reach Out</h4>
                   <div class="line-dec"></div>
-                  <p>This HTML5 template is based on Bootstrap 5 CSS. You are free to customize anything.</p>
+                 
                 </div>
               </div>
               <div class="col-lg-3">
@@ -20,7 +20,7 @@
                   <div class="icon"></div>
                   <h4>Develop a Strategy</h4>
                   <div class="line-dec"></div>
-                  <p>Lorem ipsum dolor sit ameter consectetur adipiscing li elit sed do eiusmod.</p>
+                  
                 </div>
               </div>
             
