--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <!-- <router-outlet></router-outlet> -->
 <div (scroll)="onWindowScroll($event);">
     <app-navbar></app-navbar>
-    <app-home [ngsReveal]="{ reset : true, duration: 1000}"></app-home>
-    <app-about-us [ngsReveal]="{ reset : true, duration: 1000}"></app-about-us>
-    <app-services [ngsReveal]="{ reset : true, duration: 1000}"></app-services>
-    <app-projects [ngsReveal]="{ reset : true, duration: 1000}"></app-projects>
-    <app-facts [ngsReveal]="{ reset : true, duration: 1000}"></app-facts>
-    <app-technologies [ngsReveal]="{ reset : true, duration: 1000}"></app-technologies>
-    <app-contact-us [ngsReveal]="{ reset : true, duration: 1000}"></app-contact-us>
-    <app-footer [ngsReveal]="{ reset : true, duration: 1000}"></app-footer>
+    <app-home></app-home>
+    <app-about-us></app-about-us>
+    <app-services></app-services>
+    <app-projects></app-projects>
+    <app-facts></app-facts>
+    <app-technologies></app-technologies>
+    <app-contact-us></app-contact-us>
+    <app-footer></app-footer>
 </div>
