--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,14 +1,14 @@
 <div id="technologies">
-    <h2>techno<span>logies</span></h2>
+    <h2>techno<span>logie</span></h2>
     <div class="bh">
-        <div class="container flex-wrap justify-content">
-            <div class=c ard>
+        <div class="container flex-wrap justify-content" [ngsRevealSet]="{ reset : true, duration: 1000, origin: 'bottom', distance:'50px', scale: 0.5,viewFactor : 0}" [ngsSelector]="'.card'">
+            <div class="card">
                 <h3 class="h3title">Blockchain</h3>
-                <div class=i mage>
+                <div class="image">
 
                     <img href="#" src="assets/images/blockchain.png">
                 </div>
-                <div class=c ontent>
+                <div class="content">
 
                     <p> It’s a peer-to-peer technology that enables transfer of value and assets in a decentralised fashion, eliminating the need for central authorities and intermediaries.Blockchain, the technology behind bitcoin, has made it possible to
                         operate in a trustless environment using the power of distributed computers, cryptography and consensus algorithms. Blockchain technology goes beyond payment applications to revolutionise any industry that require trust, transfer
@@ -16,13 +16,13 @@
                     </p>
                 </div>
             </div>
-            <div class=c ard>
+            <div class="card">
                 <h3 class="h3title">AI</h3>
-                <div class=i mage>
+                <div class="image">
 
                     <img href="#" src="assets/images/ai.png">
                 </div>
-                <div class=c ontent>
+                <div class="content">
 
                     <p>Since the early days of computers, the technology has evolved to allow machines to perform activities much faster and more efficient than human beings, systems of information are powering everyone’s life today, we are communicating,
                         interacting and doing business using sophisticated and intelligent applications and softwares. Like human beings, Artificial Intelligence and more specifically machine learning provide these systems of information to automatically
@@ -31,11 +31,11 @@
             </div>
             <div class=c ard>
                 <h3 class="h3title">IOT</h3>
-                <div class=i mage>
+                <div class="image">
 
                     <img href="#" src="assets/images/iot.png">
                 </div>
-                <div class=c ontent>
+                <div class="content">
 
                     <p>Advancement in technology, especially hardware, gave birth to a new paradigm where machines can be autonomous and perform a set of actions, theses machines connected to the internet can create a whole new autonomous network where information
                         is exchanged and actions could be triggered based on this information. Whether it’s sensors, home appliances, vehicles or other devices, Internet of Things has created more opportunities to integrate information and connectedness
