--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,50 +1,20 @@
-
-          <div class="features-content  d-flex justify-content-center align-items-center" >
-            <div class="row justify-content-center">
-              <div class="col-lg-3">
-                <div class="features-item first-feature wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="0s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0s; -moz-animation-delay: 0s; animation-delay: 0s;">
-                  <div class="first-number number">
-                    <h6>01</h6>
-                  </div>
-                  <div class="icon"></div>
-                  <h4>Reach Out</h4>
-                  <div class="line-dec"></div>
-                 
 <div id="projects">
-    <div class="features-content ">
-        <div [ngsReveal]="{ reset : true, duration: 1000, origin: 'bottom', distance:'50px', scale: 0.5,viewFactor : 0}">
-            <h2>proj<span>ects</span></h2>
-        </div>
-        <div class="row justify-content-center" [ngsRevealSet]="{ reset : true, duration: 1500, origin: 'bottom', distance:'50px', scale: 0.5,viewFactor : 0}" [ngsSelector]="'.features-item'">
-            <div class="col-lg-3">
-                <div class="features-item first-feature wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="0s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0s; -moz-animation-delay: 0s; animation-delay: 0s;">
-                    <div class="first-number number">
-                        <h6>01</h6>
-                    </div>
-                    <div class="icon"></div>
-                    <h4>Reach Out</h4>
-                    <div class="line-dec"></div>
-                    <p>This HTML5 template is based on Bootstrap 5 CSS. You are free to customize anything.</p>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="features-item second-feature wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
-                  <div class="second-number number">
-                    <h6>02</h6>
-                  </div>
-                  <div class="icon"></div>
-                  <h4>Develop a Strategy</h4>
-                  <div class="line-dec"></div>
-                  
-                    <div class="second-number number">
-                        <h6>02</h6>
-                    </div>
-                    <div class="icon"></div>
-                    <h4>Develop a Strategy</h4>
-                    <div class="line-dec"></div>
-                    <p>Lorem ipsum dolor sit ameter consectetur adipiscing li elit sed do eiusmod.</p>
-                </div>
-            </div>
+    <h2>proj<span>ects</span></h2>
+    <div class="container">
+        <div class="wrap">
 
+            <div class="box one">
+                <h1>Doccerts</h1>
+                <div class="poster p1">
+                    <img src="../../assets/img/logoDoc.png" alt="">
+                </div>
+            </div>
+            <div class="box two">
+                <h1>Seculedger</h1>
+                <div class="poster p1">
+                    <img src="../../assets/img/logoPh.png" alt="">
+                </div>
+            </div>
         </div>
     </div>
+</div>
