--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,7 +1,7 @@
 <div id="about">
-    <h2 [ngsReveal]="{ reset : true, duration: 1000, origin: 'bottom', distance:'50px', scale: 0.5,viewFactor : 0}">About <span>us</span></h2>
+    <h2 [ngsReveal]="{ reset : true, duration: 1000, origin: 'top', distance:'50px', scale: 0.5,viewFactor : 0}">About <span>us</span></h2>
 
-    <div [ngsRevealSet]="{ reset : true, duration: 1000, origin: 'bottom', distance:'50px', scale: 0.5,viewFactor : 0}" class="container" [ngsSelector]="'.box'">
+    <div [ngsRevealSet]="{ reset : true, duration: 1000, origin: 'top', distance:'50px', scale: 0.5,viewFactor : 0}" class="container" [ngsSelector]="'.box'">
         <div class="about-box">
 
             <div class="lists">
