--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -1,248 +1,250 @@
-.contact-us {
-    margin-top: 90px;
-    padding: 120px 0px;
-    background-image: url(../../assets/images/conact.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-  }
-  .contact-us .section-heading {
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-  
-  .contact-us .contact-info {
-    padding: 40px 30px;
-    border: 2px solid #eee;
-  }
-  
-  .contact-us .contact-info ul li {
-    text-align: center;
-    display: block;
-    margin-bottom: 30px;
-  }
-  
-  .contact-us .contact-info ul li a {
-    font-size: 15px;
-    color: #afafaf;
-    transition: all .5s;
-  }
-  
-  .contact-us .contact-info ul li:hover a {
-    color: #2a2a2a;
-  }
-  
-  .contact-us .contact-info ul li:last-child {
-    margin-bottom: 0px;
-  }
-  
-  .contact-us .contact-info ul li .icon {
-    margin-bottom: 10px;
-  }
-  
-  .contact-us .contact-info ul li .icon img {
-    max-width: 32px;
-  }
-  
-  form#contact {
-    position: relative;
-    background-color: #fff;
-    padding: 60px 80px;
-    border-radius: 50px;
-    text-align: center;
-  }
-  
-  form#contact input {
-    width: 100%;
-    height: 46px;
-    border-radius: 5px;
-    background-color: transparent;
-    border: 2px solid #efefef;
-    outline: none;
-    font-size: 15px;
-    font-weight: 300;
-    color: #2a2a2a;
-    padding: 0px 20px;
-    margin-bottom: 20px;
-  }
-  
-  form#contact input::placeholder {
-    color: #aaa;
-  }
-  
-  form#contact textarea {
-    width: 100%;
-    min-width: 100%;
-    max-width: 100%;
-    max-height: 180px;
-    min-height: 140px;
-    height: 140px;
-    border-radius: 5px;
-    background-color: transparent;
-    border: 2px solid #efefef;
-    outline: none;
-    font-size: 15px;
-    font-weight: 300;
-    color: #2a2a2a;
-    padding: 15px 20px;
-    margin-bottom: 20px;
-  }
-  
-  form#contact textarea::placeholder {
-    color: #aaa;
-  }
-  
-  form#contact button {
-    display: inline-block;
-    background-color: #33ccc5;
-    font-size: 15px;
-    font-weight: 400;
-    color: #fff;
-    margin-top: 20px;
-    text-transform: capitalize;
-    padding: 12px 25px;
-    border-radius: 23px;
-    letter-spacing: 0.25px;
-    border-bottom: 2px solid #4771cb!important;
-    transition: all .3s;
-    outline: none;
-    border: none;
-  }
-  
-  form#contact button:hover {
-    background-color: #4771cb!important;
-    color: #fff!important;
-    border-bottom: 2px solid #33ccc5!important;
-  }
-  
-  /* 
+    #contact {
+        margin-top: 90px;
+        padding: 120px 0 0 0;
+        position: relative;
+        overflow: visible;
+    }
+
+    #contact .container {
+        z-index: 10;
+        padding-bottom: 50px;
+    }
+
+    .bg-image {
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        z-index: -100;
+        position: absolute;
+        bottom: 0;
+        height: 100vh;
+        width: 100vw;
+        background-image: url(../../assets/images/conact.jpg);
+        clip-path: polygon(100% 0, 100% 80%, 0 100%, 0 18%);
+    }
+
+    .contact-us .section-heading {
+        text-align: center;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .contact-us .contact-info {
+        padding: 40px 30px;
+        border: 2px solid #eee;
+    }
+
+    .contact-us .contact-info ul li {
+        text-align: center;
+        display: block;
+        margin-bottom: 30px;
+    }
+
+    .contact-us .contact-info ul li a {
+        font-size: 15px;
+        color: #afafaf;
+        transition: all .5s;
+    }
+
+    .contact-us .contact-info ul li:hover a {
+        color: #2a2a2a;
+    }
+
+    .contact-us .contact-info ul li:last-child {
+        margin-bottom: 0px;
+    }
+
+    .contact-us .contact-info ul li .icon {
+        margin-bottom: 10px;
+    }
+
+    .contact-us .contact-info ul li .icon img {
+        max-width: 32px;
+    }
+
+    form#contactu {
+        position: relative;
+        background-color: #fff;
+        padding: 60px 80px;
+        border-radius: 50px;
+        text-align: center;
+        box-shadow: 0 0 20px #ccc;
+    }
+
+    form#contactu input {
+        width: 100%;
+        height: 46px;
+        border-radius: 5px;
+        background-color: transparent;
+        border: 2px solid #efefef;
+        outline: none;
+        font-size: 15px;
+        font-weight: 300;
+        color: #2a2a2a;
+        padding: 0px 20px;
+        margin-bottom: 20px;
+    }
+
+    form#contactu input::placeholder {
+        color: #aaa;
+    }
+
+    form#contactu textarea {
+        width: 100%;
+        min-width: 100%;
+        max-width: 100%;
+        max-height: 180px;
+        min-height: 140px;
+        height: 140px;
+        border-radius: 5px;
+        background-color: transparent;
+        border: 2px solid #efefef;
+        outline: none;
+        font-size: 15px;
+        font-weight: 300;
+        color: #2a2a2a;
+        padding: 15px 20px;
+        margin-bottom: 20px;
+    }
+
+    form#contactu textarea::placeholder {
+        color: #aaa;
+    }
+
+    form#contactu button {
+        display: inline-block;
+        background-color: #33ccc5;
+        font-size: 15px;
+        font-weight: 400;
+        color: #fff;
+        margin-top: 20px;
+        text-transform: capitalize;
+        padding: 12px 25px;
+        border-radius: 23px;
+        letter-spacing: 0.25px;
+        border-bottom: 2px solid #4771cb!important;
+        transition: all .3s;
+        outline: none;
+        border: none;
+    }
+
+    form#contactu button:hover {
+        background-color: #4771cb!important;
+        color: #fff!important;
+        border-bottom: 2px solid #33ccc5!important;
+    }
+    /*
   ---------------------------------------------
   Footer Style
-  --------------------------------------------- 
+  ---------------------------------------------
   */
-  
-  footer p {
-    text-align: center;
-    margin: 30px 0px;
-  }
-  
-  footer p a {
-    color: #33ccc5;
-    transition: all .5s;
-  }
-  
-  footer p a:hover {
-    color: #4771cb;
-  }
-  
-  /* 
+    /*
   ---------------------------------------------
   responsive
-  --------------------------------------------- 
+  ---------------------------------------------
   */
-  
-  @media (max-width: 1200px) {
-    .header-area .main-nav .logo h4 {
-      font-size: 24px;
+
+    @media (max-width: 1200px) {
+        .header-area .main-nav .logo h4 {
+            font-size: 24px;
+        }
+        .header-area .main-nav .logo h4 img {
+            max-width: 25px;
+            margin-left: 0px;
+        }
+        .header-area .main-nav .nav li:last-child {
+            padding-left: 20px;
+        }
     }
-    .header-area .main-nav .logo h4 img {
-      max-width: 25px;
-      margin-left: 0px;
+
+    @media (max-width: 992px) {
+        .header-area .main-nav .logo h4 {
+            font-size: 20px;
+        }
+        .main-banner .left-content {
+            margin-right: 0px;
+        }
+        .main-banner {
+            text-align: center;
+        }
+        .main-banner:before {
+            display: none;
+        }
+        .main-banner .right-image {
+            margin: 30px auto 0px auto;
+            text-align: center;
+        }
+        .features-item {
+            margin-bottom: 45px;
+        }
+        .last-features-item,
+        .last-skill-item {
+            margin-bottom: 0px !important;
+        }
+        .skill-item {
+            margin-bottom: 30px;
+        }
+        .service-item {
+            text-align: center;
+        }
+        .service-item .icon {
+            margin-top: 0px;
+            margin-bottom: 30px;
+        }
+        .about-us .left-image {
+            margin-right: 30px;
+            margin-left: 30px;
+            margin-bottom: 45px;
+        }
+        .our-portfolio .owl-nav {
+            display: none !important;
+        }
+        .contact-info {
+            margin-top: 60px;
+        }
+        form#contactu {
+            padding: 45px;
+        }
     }
-    .header-area .main-nav .nav li:last-child {
-      padding-left: 20px;
+
+    @media (max-width: 767px) {
+        .header-area .main-nav .logo h4 {
+            font-size: 30px;
+        }
+        .header-area .main-nav .logo h4 img {
+            max-width: 30px;
+            margin-left: 5px;
+        }
+        .main-banner .info-stat {
+            margin-bottom: 15px;
+        }
+        .service-item {
+            text-align: center;
+            padding: 30px;
+        }
+        .service-item .icon {
+            float: none;
+            margin-right: 0px;
+            margin-bottom: 15px;
+        }
+        .service-item .right-content {
+            display: inline-block;
+        }
+        .our-portfolio .section-heading,
+        .about-us .section-heading,
+        .about-us .about-item,
+        .about-us p,
+        .about-us .main-green-button {
+            text-align: center;
+        }
+        .our-services .section-heading {
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+        .about-us .about-item {
+            margin-top: 15px;
+        }
+        form#contactu {
+            padding: 30px;
+        }
     }
-  }
-  
-  @media (max-width: 992px) {
-    .header-area .main-nav .logo h4 {
-      font-size: 20px;
-    }
-    .main-banner .left-content {
-      margin-right: 0px;
-    }
-    .main-banner {
-      text-align: center;
-    }
-    .main-banner:before {
-      display: none;
-    }
-    .main-banner .right-image {
-      margin: 30px auto 0px auto;
-      text-align: center;
-    }
-    .features-item {
-      margin-bottom: 45px;
-    }
-    .last-features-item,
-    .last-skill-item {
-      margin-bottom: 0px !important;
-    }
-    .skill-item {
-      margin-bottom: 30px;
-    }
-    .service-item {
-      text-align: center;
-    }
-    .service-item .icon {
-      margin-top: 0px;
-      margin-bottom: 30px;
-    }
-    .about-us .left-image {
-      margin-right: 30px;
-      margin-left: 30px;
-      margin-bottom: 45px;
-    }
-    .our-portfolio .owl-nav {
-      display: none !important;
-    }
-    .contact-info {
-      margin-top: 60px;
-    }
-    form#contact {
-      padding: 45px;
-    }
-  }
-  
-  @media (max-width: 767px) {
-    .header-area .main-nav .logo h4 {
-      font-size: 30px;
-    }
-    .header-area .main-nav .logo h4 img {
-      max-width: 30px;
-      margin-left: 5px;
-    }
-    .main-banner .info-stat {
-      margin-bottom: 15px;
-    }
-    .service-item {
-      text-align: center;
-      padding: 30px;
-    }
-    .service-item .icon {
-      float: none;
-      margin-right: 0px;
-      margin-bottom: 15px;
-    }
-    .service-item .right-content {
-      display: inline-block;
-    }
-    .our-portfolio .section-heading,
-    .about-us .section-heading,
-    .about-us .about-item,
-    .about-us p,
-    .about-us .main-green-button {
-      text-align: center;
-    }
-    .our-services .section-heading {
-      margin-left: 15px;
-      margin-right: 15px;
-    }
-    .about-us .about-item {
-      margin-top: 15px;
-    }
-    form#contact {
-      padding: 30px;
-    }
-  }
