--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,134 +1,25 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+$prim :#151F3E;
+$sec:#00a2e2;
+footer p {
+    text-align: center;
+    margin: 30px 0px;
+    color: #fff !important;
 }
 
-footer {
-    display: block;
+footer p a {
+    color: #33ccc5;
+    transition: all .5s;
+}
+
+footer p a:hover {
+    color: #4771cb;
+}
+
+#footer {
+    text-align: center;
+    position: relative;
     bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba($color: #fff, $alpha: 0.5);
-    border-top: 4px solid white;
-    height: auto;
-    width: 100vw;
-    padding-top: 1px;
-    color: #fff;
-    position: static;
-}
-
-h3 {
-    color: #151F3E;
-}
-
-.footer-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-}
-
-.footer-content h3 {
-    font-size: 2.1rem;
-    font-weight: 500;
-    text-transform: capitalize;
-    line-height: 3rem;
-}
-
-.footer-content p {
-    max-width: 500px;
-    margin: 10px auto;
-    line-height: 28px;
-    font-size: 16px;
-    color: #fff;
-}
-
-.footer-content img {
-    width: 169px;
-    padding: 20px;
-}
-
-.socials {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 5px;
-}
-
-.socials li {
-    margin: 0 10px;
-}
-
-.socials a {
-    text-decoration: none;
-    color: #151F3E;
-    border: 2px solid #151F3E;
-    padding: 5px;
-    border-radius: 50%;
-}
-
-.socials a fa-icon {
-    padding: 3px;
-}
-
-.socials :hover {
-    color: aqua;
-}
-
-.footer-bottom {
-    background: #000;
-    width: 100vw;
-    text-align: center;
-    padding: 10px;
-}
-
-.footer-bottom p {
-    font-size: 14px;
-    word-spacing: 2px;
-    text-transform: capitalize;
-}
-
-.footer-bottom p a {
-    color: #fff;
-    font-size: 16px;
-    text-decoration: none;
-}
-
-.footer-bottom span {
-    text-transform: uppercase;
-    opacity: .4;
-    font-weight: 200;
-}
-
-.footer-menu {
-    float: right;
-}
-
-.footer-menu ul {
-    display: flex;
-}
-
-.footer-menu ul li {
-    padding-right: 10px;
-    display: block;
-}
-
-.footer-menu ul li a {
-    color: #F2F2FB;
-    text-decoration: none;
-}
-
-.footer-menu ul li a:hover {
-    color: #27bcda;
-}
-
-@media (max-width:500px) {
-    .footer-menu ul {
-        display: flex;
-        margin-top: 10px;
-        margin-bottom: 20px;
-    }
+    z-index: 100;
+    height: 80px !important;
+    background-color: $prim;
 }
