--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,18 +2,21 @@
     <h2>proj<span>ects</span></h2>
     <div class="container">
         <div class="wrap">
-
             <div class="box one">
-                <h1>Doccerts</h1>
-                <div class="poster p1">
-                    <img src="../../assets/img/logoDoc.png" alt="">
-                </div>
+                <a href="https://doccerts.com/" target="_blank">
+                    <h1>Doccerts</h1>
+                    <div class="poster p1">
+                        <img src="../../assets/img/logoDoc.png" alt="">
+                    </div>
+                </a>
             </div>
             <div class="box two">
-                <h1>Seculedger</h1>
-                <div class="poster p1">
-                    <img src="../../assets/img/logoPh.png" alt="">
-                </div>
+                <a href="https://seculedger.com/home" target="_blank">
+                    <h1>Seculedger</h1>
+                    <div class="poster p1">
+                        <img src="../../assets/img/logoPh.png" alt="">
+                    </div>
+                </a>
             </div>
         </div>
     </div>
