--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -1,249 +1,92 @@
+$prim :#151F3E;
+$sec:#00a2e2;
 .projcard-container {
-    margin: 30px 0;
-}
-
-
-/* Actual Code: */
-
-@media (max-width:786px) {}
-
-.projcard-container,
-.projcard-container * {
-    box-sizing: border-box;
-}
-
-.projcard-container {
-    margin-left: auto;
-    margin-right: auto;
     width: 100%;
 }
 
 .projcard {
-    position: relative;
-    width: 100%;
-    height: 250px;
-    margin-bottom: 30px;
-    border-radius: 10px;
     background-color: #fff;
-    border: 2px solid #ddd;
-    font-size: 18px;
+    box-shadow: 0 0 20px gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90vw;
+    margin: 20px 0;
+    min-height: 300px;
+    border-radius: 10px;
     overflow: hidden;
-    cursor: pointer;
-    box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
-    transition: box-shadow 0.2s ease, transform 0.2s ease;
-}
-
-.projcard:hover {
-    box-shadow: 0 34px 32px -33px rgba(0, 0, 0, .18);
-    transform: translate(0px, -3px);
-}
-
-.projcard::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: linear-gradient(-70deg, #424242, transparent 50%);
-    opacity: 0.07;
-}
-
-.projcard:nth-child(2n)::before {
-    background-image: linear-gradient(-250deg, #424242, transparent 50%);
 }
 
 .projcard-innerbox {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
-.projcard-img {
-    position: absolute;
-    height: 250px;
-    width: 400px;
-    top: 0;
-    left: 0;
-    transition: transform 0.2s ease;
+.image-cont {
+    width: 300px;
+    height: 300px;
+    flex-grow: 1;
 }
 
-.projcard:nth-child(2n) .projcard-img {
-    left: initial;
-    right: 0;
-}
-
-.projcard:hover .projcard-img {
-    transform: scale(1.05) rotate(1deg);
-}
-
-.projcard:hover .projcard-bar {
-    width: 70px;
+.image-cont img {
+    height: 100%;
+    width: 100%;
 }
 
 .projcard-textbox {
-    position: absolute;
-    top: 7%;
-    bottom: 7%;
-    left: 430px;
-    width: calc(65% - 6px);
-    font-size: 16px;
-}
-
-.projcard:nth-child(2n) .projcard-textbox {
-    left: initial;
-    right: 430px;
-}
-
-.projcard-textbox::before,
-.projcard-textbox::after {
-    content: "";
-    position: absolute;
-    display: block;
-    background: #ff0000bb;
-    background: #fff;
-    top: -20%;
-    left: -65px;
-    height: 140%;
-    width: 60px;
-    transform: rotate(8deg);
-}
-
-.projcard:nth-child(2n) .projcard-textbox::before {
-    display: none;
-}
-
-.projcard-textbox::after {
-    display: none;
-    left: initial;
-    right: -55px;
-}
-
-.projcard:nth-child(2n) .projcard-textbox::after {
-    display: block;
-}
-
-.projcard-textbox * {
+    overflow: visible;
     position: relative;
+    max-width: 66%;
+    flex-grow: 1;
+    padding: 20px;
+}
+
+.cadre {
+    z-index: 111;
+    position: absolute;
+    height: 100%;
+    left: -100px;
+    top: 0px;
+    border-style: solid;
+    border-width: 0 0 300px 100px;
+    border-color: transparent transparent #fff transparent;
 }
 
 .projcard-title {
-    font-family: 'Voces', 'Open Sans', arial, sans-serif;
-    font-size: 21px;
-}
-
-.projcard-bar {
-    left: -2px;
-    width: 50px;
-    height: 5px;
-    margin: 10px 0;
-    border-radius: 5px;
-    background-color: #424242;
-    transition: width 0.2s ease;
-}
-
-.projcard-blue .projcard-bar {
-    background-color: #0088FF;
-}
-
-.projcard-blue::before {
-    background-image: linear-gradient(-70deg, #0088FF, transparent 50%);
-}
-
-.projcard-blue:nth-child(2n)::before {
-    background-image: linear-gradient(-250deg, #0088FF, transparent 50%);
-}
-
-.projcard-red .projcard-bar {
-    background-color: #D62F1F;
-}
-
-.projcard-red::before {
-    background-image: linear-gradient(-70deg, #D62F1F, transparent 50%);
-}
-
-.projcard-red:nth-child(2n)::before {
-    background-image: linear-gradient(-250deg, #D62F1F, transparent 50%);
-}
-
-.projcard-green .projcard-bar {
-    background-color: #40BD00;
-}
-
-.projcard-green::before {
-    background-image: linear-gradient(-70deg, #40BD00, transparent 50%);
-}
-
-.projcard-green:nth-child(2n)::before {
-    background-image: linear-gradient(-250deg, #40BD00, transparent 50%);
-}
-
-.projcard-yellow .projcard-bar {
-    background-color: #F5AF41;
-}
-
-.projcard-yellow::before {
-    background-image: linear-gradient(-70deg, #F5AF41, transparent 50%);
-}
-
-.projcard-yellow:nth-child(2n)::before {
-    background-image: linear-gradient(-250deg, #F5AF41, transparent 50%);
-}
-
-.projcard-orange .projcard-bar {
-    background-color: #FF5722;
-}
-
-.projcard-orange::before {
-    background-image: linear-gradient(-70deg, #FF5722, transparent 50%);
-}
-
-.projcard-orange:nth-child(2n)::before {
-    background-image: linear-gradient(-250deg, #FF5722, transparent 50%);
-}
-
-.projcard-brown .projcard-bar {
-    background-color: #C49863;
-}
-
-.projcard-brown::before {
-    background-image: linear-gradient(-70deg, #C49863, transparent 50%);
-}
-
-.projcard-brown:nth-child(2n)::before {
-    background-image: linear-gradient(-250deg, #C49863, transparent 50%);
-}
-
-.projcard-grey .projcard-bar {
-    background-color: #424242;
-}
-
-.projcard-grey::before {
-    background-image: linear-gradient(-70deg, #424242, transparent 50%);
-}
-
-.projcard-grey:nth-child(2n)::before {
-    background-image: linear-gradient(-250deg, #424242, transparent 50%);
-}
-
-.projcard-customcolor .projcard-bar {
-    background-color: var(--projcard-color);
-}
-
-.projcard-customcolor::before {
-    background-image: linear-gradient(-70deg, var(--projcard-color), transparent 50%);
-}
-
-.projcard-customcolor:nth-child(2n)::before {
-    background-image: linear-gradient(-250deg, var(--projcard-color), transparent 50%);
+    font-size: 24px;
+    color: $sec;
+    font-weight: 600;
+    padding: 0 20px 10px 20px;
 }
 
 .projcard-description {
-    font-size: 13px;
-    color: #424242;
-    height: 800px;
-    display: inline;
-    text-overflow: ellipsis;
+    color: rgba($color: #000000, $alpha: 0.8);
+    background-color: rgba($color: $sec, $alpha: 0.1);
+    text-align: justify;
+    padding: 20px;
+    border-top: 1px solid $sec;
+}
+
+@media (max-width:980px) {
+    .projcard-textbox {
+        max-width: 100%;
+    }
+    .image-cont {
+        width: 300px;
+        height: 100px;
+        flex-grow: 1;
+        position: relative;
+        overflow: hidden;
+    }
+    .image-cont img {
+        height: 100vh;
+        width: 100%;
+        position: absolute;
+        top: 0;
+    }
+    .projcard-title {
+        text-align: center;
+    }
 }
