--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -75,3 +75,16 @@
         </div>
     </div>
 </div>
+<div class="social-buttons">
+
+    <a href="https://www.twitter.com/ir4lab" class="social-buttons__button social-button social-button--twitter" aria-label="LinkedIn">
+        <fa-icon [icon]="faTwitter" size="2x"></fa-icon>
+    </a>
+    <a href="https://www.facebook.com/IR4.Lab" class="social-buttons__button social-button social-button--facebook" aria-label="LinkedIn">
+        <fa-icon [icon]="faFacebook" size="2x"></fa-icon>
+    </a>
+    <a href="https://www.linkedin.com/company/ir4lab/" class="social-buttons__button social-button social-button--linkedin" aria-label="LinkedIn">
+        <fa-icon [icon]="faLinkedin" size="2x"></fa-icon>
+    </a>
+
+</div>
