--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -248,3 +248,78 @@
             padding: 30px;
         }
     }
+
+    // social buttons --------------
+    .social-buttons {
+        padding-bottom: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: -10px;
+        &__button {
+            margin: 10px 5px 0;
+        }
+    }
+
+    $social-button-size: 70px;
+    $social-button-icon-size: 0.4;
+    $social-button-background: #fff;
+    $social-button-active-color: #fff;
+    $social-button-transition-time: 0.3s;
+    $social-button-colors: ( 'twitter': #1DA1F2, 'facebook': #4267B2, 'linkedin': #0e76a8);
+    .social-button {
+        border: 1px solid rgba($color: blue, $alpha: 0.3);
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        outline: none;
+        width: $social-button-size;
+        height: $social-button-size;
+        text-decoration: none;
+        border-radius: 100%;
+        background: $social-button-background;
+        text-align: center;
+        &::after {
+            content: '';
+            position: absolute;
+            top: -1px;
+            left: 50%;
+            display: block;
+            width: 0;
+            height: 0;
+            border-radius: 100%;
+            transition: $social-button-transition-time;
+        }
+        &:focus,
+        &:hover {
+            color: $social-button-active-color;
+            &::after {
+                width: calc(100% + 2px);
+                height: calc(100% + 2px);
+                margin-left: calc(-50% - 1px);
+            }
+        }
+        fa-icon,
+        svg {
+            position: relative;
+            z-index: 1;
+            transition: $social-button-transition-time;
+        }
+        i {
+            font-size: $social-button-size * $social-button-icon-size;
+        }
+        svg {
+            height: percentage($social-button-icon-size);
+            width: percentage($social-button-icon-size);
+        }
+        @each $name,
+        $color in $social-button-colors {
+            &--#{$name} {
+                color: $color;
+                &::after {
+                    background: $color;
+                }
+            }
+        }
+    }
