--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,13 +1,13 @@
 <div id="about">
     <h2 [ngsReveal]="{ reset : true, duration: 1000, origin: 'top', distance:'50px', scale: 0.5,viewFactor : 0}">About <span>us</span></h2>
 
-    <div [ngsRevealSet]="{ reset : true, duration: 1000, origin: 'top', distance:'50px', scale: 0.5,viewFactor : 0}" class="container" [ngsSelector]="'.box'">
+    <div [ngsRevealSet]="{ reset : true, duration: 1000, origin: 'top', distance:'50px', scale: 0.5,viewFactor : 0}" class="container" [ngsSelector]="'.aboutbox'">
         <div class="about-box">
 
             <div class="lists">
 
                 <div class="row1-container">
-                    <div class="box box-down cyan">
+                    <div class="box box-down cyan aboutbox">
                         <h2>Objective</h2>
                         <p>IR4LAB was born because of the need of catalyst and enabler environment to make sure that nobody is left behind and to support the society of tomorrow.</p>
                         <div>
@@ -15,7 +15,7 @@
                         </div>
                     </div>
 
-                    <div class="box red">
+                    <div class="box red aboutbox">
                         <h2>Commitment</h2>
                         <p>IR4LAB is committed to bring forward the goal of transforming the region’s unique strategic location into a global hub connecting three continents, Asia, Europe and Africa.</p>
                         <div>
@@ -23,7 +23,7 @@
                         </div>
                     </div>
 
-                    <div class="box box-down blue">
+                    <div class="box box-down blue aboutbox">
                         <h2>Power</h2>
                         <p>IR4LAB is bringing the power of disruptive technologies to enable the future NOW, from development services, creating awareness, building solutions that will enable new business models or improve existing processes and most importantly
                             building new capabilities in the MENA region.</p>
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="row2-container">
-                    <div class="box orange">
+                    <div class="box orange aboutbox">
                         <h2>Improvement</h2>
                         <p>IR4LAB aspires to become a leader in emerging technologies, improving existing processes in different industries and enabling new business models to create added value to our communities and the society as a whole.</p>
                         <div>
