--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -1,8 +1,24 @@
+    $prim :#151F3E;
+    $sec:#00a2e2;
     #contact {
         margin-top: 90px;
         padding: 120px 0 0 0;
         position: relative;
         overflow: visible;
+    }
+
+    h2 {
+        font-weight: 800;
+        padding: 10px;
+        text-align: center;
+    }
+
+    h3 {
+        font-style: italic;
+    }
+
+    h2 span {
+        color: $sec;
     }
 
     #contact .container {
@@ -83,6 +99,35 @@
         color: #2a2a2a;
         padding: 0px 20px;
         margin-bottom: 20px;
+    }
+
+    form#contactu select {
+        width: 100%;
+        height: 46px;
+        border-radius: 5px;
+        background-color: transparent;
+        border: 2px solid #efefef;
+        outline: none;
+        font-size: 15px;
+        font-weight: 300;
+        color: #2a2a2a;
+        padding: 0px 20px;
+        margin-bottom: 20px;
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23000000%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
+        background-repeat: no-repeat;
+        background-position: right .7em top 50%;
+        background-size: .65em auto;
+    }
+
+    form#contactu select option {
+        border: 2px solid #efefef;
+    }
+
+    form#contactu select::placeholder {
+        color: #aaa;
     }
 
     form#contactu input::placeholder {
@@ -266,7 +311,9 @@
     $social-button-background: #fff;
     $social-button-active-color: #fff;
     $social-button-transition-time: 0.3s;
-    $social-button-colors: ( 'twitter': #1DA1F2, 'facebook': #4267B2, 'linkedin': #0e76a8);
+    $social-button-colors: ( 'twitter': #1DA1F2,
+    'facebook': #4267B2,
+    'linkedin': #0e76a8);
     .social-button {
         border: 1px solid rgba($color: blue, $alpha: 0.3);
         position: relative;
