--- a/src/app/facts/facts.component.html
+++ b/src/app/facts/facts.component.html
@@ -1,27 +1,27 @@
 <div id="facts">
-    <div class="row" [ngsRevealSet]="{ reset : true, duration: 1000, origin: 'bottom', distance:'50px', scale: 0.5,viewFactor : 0}" [ngsSelector]="'.col-sm-3'">
-        <div class="col-sm-3 col-xs-6">
+    <div class="row" [ngsRevealSet]="{ reset : true, duration: 1000, origin: 'bottom', distance:'50px', scale: 0.5,viewFactor : 0}" [ngsSelector]="'.factsbox'">
+        <div class="col-sm-3 col-xs-6 factsbox">
             <div class="counter">
                 <animated-digit [digit]="5" [duration]="500"></animated-digit>
                 <h3>Clients</h3>
             </div>
             <!-- /. -->
         </div>
-        <div class="col-sm-3 col-xs-6">
+        <div class="col-sm-3 col-xs-6 factsbox">
             <div class="counter">
                 <animated-digit [digit]="4" [duration]="500"></animated-digit>
                 <h3>Projects</h3>
             </div>
             <!-- /. -->
         </div>
-        <div class="col-sm-3 col-xs-6">
+        <div class="col-sm-3 col-xs-6 factsbox">
             <div class="counter">
                 <animated-digit [digit]="14000" [duration]="500"></animated-digit>
                 <h3>Hours of Support</h3>
             </div>
             <!-- /. -->
         </div>
-        <div class="col-sm-3 col-xs-6">
+        <div class="col-sm-3 col-xs-6 factsbox">
             <div class="counter">
                 <animated-digit [digit]="20" [duration]="500"></animated-digit>
                 <h3>Team Numbers</h3>
