--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,5 +1,5 @@
 <div class="projcard-container d-flex justify-content-center align-content-center ">
-    <div class="wrapper">
+    <div class="wrapper" [ngsRevealSet]="{ reset : true, duration: 1000, origin: 'top', distance:'50px', scale: 0.5,viewFactor : 0}" class="container" [ngsSelector]="'.projcard'">
         <div class="projcard projcard-blue">
             <div class="projcard-innerbox">
                 <div class="image-cont">
