--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -7,8 +7,8 @@
                     <div class="row">
                         <div class="col-lg-6 offset-lg-3">
                             <div class="section-heading">
-                                <h6>Contact Us</h6>
-                                <h2>Fill Out The Form Below To <span>Get</span> In <em>Touch</em> With Us</h2>
+                                <h2 [ngsReveal]="{ reset : true, duration: 1000, origin: 'top', distance:'50px', scale: 0.5,viewFactor : 0}">Contact <span>us</span></h2>
+                                <h3>Fill Out The Form Below To <span>Get</span> In <em>Touch</em> With Us</h3>
                             </div>
                         </div>
                         <div class="col-lg-9">
@@ -30,7 +30,14 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <fieldset>
-                                        <input type="subject" name="subject" id="subject" placeholder="Subject" autocomplete="on">
+                                        <select class="form-control" type="text" name="subject" id="subject" placeholder="Subject">
+                                        <option>Project</option>
+                                        <option>Partnership</option>
+                                        <option>Upcoming courses</option>
+                                        <option>Upcoming events</option>
+                                        <option>Suggestion</option>
+                                        <option>Other</option>
+                                    </select>
                                     </fieldset>
                                 </div>
                                 <div class="col-lg-12">
