--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,8 +1,8 @@
 <div id="services" class="our-services section justify-content">
-    <div class="container " [ngsRevealSet]="{ reset : true, duration: 1000, origin: 'bottom', distance:'50px', scale: 0.5,viewFactor : 0}" [ngsSelector]="'.section-heading'">
+    <div class="container " [ngsRevealSet]="{ reset : true, duration: 1000, origin: 'bottom', distance:'50px', scale: 0.5,viewFactor : 0}" [ngsSelector]="'.servicehead'">
         <div class="row">
             <div class="col-lg-6 offset-lg-3">
-                <div class="section-heading wow bounceIn animated" data-wow-duration="1s" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+                <div class="section-heading wow bounceIn animated servicehead" data-wow-duration="1s" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
                     <h2>Serv<span>ices</span></h2>
                     <h4>Discover What We Do &amp; <span>Offer</span> To Our <em>Clients</em></h4>
                 </div>
